--- a/compose.yml
+++ b/compose.yml
@@ -8,8 +8,8 @@ services: # корневое имя параметра, в котором пер
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    ports: # пробрасываем порт из контенера во вне. порт_компа:порт_внутри_контенера
-      - "5432:5432" # только для разработки в других случаях убрать доступ к базе данных из вне
+    # ports: # пробрасываем порт из контенера во вне. порт_компа:порт_внутри_контенера
+    #   - "5432:5432" # только для разработки в других случаях убрать доступ к базе данных из вне
 
   laba-7-django: # произвойльное имя контенера. на уровне файла конфигурации 
     container_name: laba-7-django # указываем имя контенера для отобьражения в докере
@@ -24,6 +24,22 @@ services: # корневое имя параметра, в котором пер
     depends_on: # указываем что этот контенера зависит от другого контенера
       - laba-7-db
 
+  laba-7-vue:
+    container_name: laba-7-vue
+    build:
+        context: ./vue-project
+    image: laba-7-vue:latest
+    command: npm run dev -- --host=0.0.0.0
+    # command: npm i
+    environment: 
+      - CHOKIDAR_USEPOLLING=true
+      - BACKEND_URL=laba-7-django:8007
+    ports:
+        - "8087:5173"
+    volumes:
+        - ./vue-project:/app
+        - ignore:/app/node_modules
+
   laba-7-swagger:
     container_name: laba-7-swagger
     image: swaggerapi/swagger-ui:latest
@@ -34,3 +50,6 @@ services: # корневое имя параметра, в котором пер
       SWAGGER_JSON: /swagger.yml
     ports:
       - "8017:8080"
+
+volumes:
+  ignore:
