--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services: # корневое имя параметра, в котором перечисляються все контенеры
   laba-7-db: # произвойльное имя контенера. на уровне файла конфигурации
     container_name: laba-7-db # указываем имя контенера для отобьражения в докере
-    image: postgres:alpine # имя базового образа для запуска контенера (что то вроде имя дистрибутива операционной системы)
+    image: postgres:17-alpine # имя базового образа для запуска контенера (что то вроде имя дистрибутива операционной системы)
     volumes: # подключаем папку этого копьютера к папке внутри контенера (папка_на_компе:папка_внутри_коненера)
       - ./database-data/db:/var/lib/postgresql/data
     environment: # задаем свои параметры окружающей среды внутри контейнера (что то вроде глобальный переменных внутри ОС)
@@ -40,16 +40,16 @@ services: # корневое имя параметра, в котором пер
         - ./vue-project:/app
         - ignore:/app/node_modules
 
-  laba-7-swagger:
-    container_name: laba-7-swagger
-    image: swaggerapi/swagger-ui:latest
-    volumes:
-      - ./swagger/swagger.yml:/swagger.yml
-      - ./swagger/django-proxy.conf:/etc/nginx/templates/default.conf.template
-    environment:
-      SWAGGER_JSON: /swagger.yml
-    ports:
-      - "8017:8080"
+  # laba-7-swagger:
+  #   container_name: laba-7-swagger
+  #   image: swaggerapi/swagger-ui:latest
+  #   volumes:
+  #     - ./swagger/swagger.yml:/swagger.yml
+  #     - ./swagger/django-proxy.conf:/etc/nginx/templates/default.conf.template
+  #   environment:
+  #     SWAGGER_JSON: /swagger.yml
+  #   ports:
+  #     - "8017:8080"
 
 volumes:
   ignore:
